--- a/style.css
+++ b/style.css
@@ -11,8 +11,12 @@ h1 {
     margin: 0 auto;
     width: 50%;
     background-color: #fff;
-    border-collapse: separate;
     border-spacing: 0px 10px;
+    max-width: 500px;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px #888;
+
 }
 
 #client-table th {
@@ -20,12 +24,14 @@ h1 {
     color: #fff;
     padding: 5px;
     text-align: left;
+
 }
 
 #client-table td {
     padding: 10px;
     border: 1px solid gray;
     text-align: left;
+    border-radius: 5px;
 }
 
 #client-table tr:nth-child(odd) {
@@ -79,6 +85,8 @@ h1 {
     border: 1px solid #ccc;
     font-size: 16px;
 }
+
+
 
 .button {
     padding: 0.45rem 1.35rem;
